Improve performance of GroupTable jmix-framework/jmix#1087